# cosmwasm-erc20

./: Cargo.toml
schema/: cw-erc20.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_allowance.json  response_to_balance_of.json  response_to_decimal.json  response_to_name.json  response_to_symbol.json  response_to_total_supply.json
src/: contract.rs  lib.rs  msg.rs  state.rs
src/multitest/: contract.rs  tests.rs
